logs/django-server-config.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/config'...
Listing './lib/python3.5/site-packages/config/management'...
Listing './lib/python3.5/site-packages/config/management/commands'...
Compiling './lib/python3.5/site-packages/config/management/commands/make_config.py'...
***   File "./lib/python3.5/site-packages/config/management/commands/make_config.py", line 19
    print self.help
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/config/redsolution_setup'...
Listing './lib/python3.5/site-packages/config/redsolution_setup/templates'...
Listing './lib/python3.5/site-packages/config/redsolution_setup/templates/config'...
Listing './lib/python3.5/site-packages/config/redsolution_setup/templates/config/redsolutioncms'...
Listing './lib/python3.5/site-packages/config/templates'...
Listing './lib/python3.5/site-packages/config/templates/config'...
Listing './lib/python3.5/site-packages/config/templatetags'...
Compiling './lib/python3.5/site-packages/config/utils.py'...
***   File "./lib/python3.5/site-packages/config/utils.py", line 51
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/django_server_config-0.1.3.egg-info'...
Listing './lib/python3.5/site-packages/ordereddict-1.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
